k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blaze-competition
  labels:
    name: blaze-competition
