k8s/worker-competition-status.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blaze-competition-php-worker-competition-status
  namespace: blaze-competition
  labels:
    app: blaze-competition-php-worker-competition-status
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blaze-competition-php-worker-competition-status
  template:
    metadata:
      labels:
        app: blaze-competition-php-worker-competition-status
    spec:
      containers:
      - name: php-worker
        image: 127.0.0.1:32000/app-php-prod:latest
        imagePullPolicy: IfNotPresent
        command: ["php", "bin/console", "messenger:consume", "competition_status_amqp", "--verbose", "--time-limit=3600", "--memory-limit=128M"]
        resources:
          limits:
            memory: "64Mi" 
            cpu: "200m" 
          requests:
            memory: "32Mi"
            cpu: "100m"
      # volumes:
      # - name: app-code
      #   emptyDir: {}
      # - name: var-volume
      #   emptyDir: {}
        livenessProbe:
          exec:
            command: ["php", "bin/console", "about"]
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command: ["php", "bin/console", "about"]
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
