k8s/worker-email.yaml
# k8s/messenger-worker-email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messenger-worker-email
  namespace: blaze-competition-dev
  labels:
    app: messenger-worker-email
spec:
  replicas: 1 # Fixed replica, or scale with KEDA if email volume is high
  selector:
    matchLabels:
      app: messenger-worker-email
  template:
    metadata:
      labels:
        app: messenger-worker-email
    spec:
      containers:
      - name: worker
        image: 192.168.56.11:32000/blaze-competition/app:latest
        command: ["php", "bin/console", "messenger:consume", "email_verification_transport", "email_notification_transport", "--verbose", "--time-limit=3600", "--memory-limit=128M"]
        volumeMounts:
        - name: app-code
          mountPath: /app
        - name: var-volume
          mountPath: /app/var
        resources:
          limits:
            cpu: "100m"
            memory: "192Mi"
          requests:
            cpu: "50m"
            memory: "96Mi"
      volumes:
      - name: app-code
        emptyDir: {}
      - name: var-volume
        emptyDir: {}
