k8s/worker-submission-high-priority.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blaze-competition-php-worker-submission-high-priority
  namespace: blaze-competition
  labels:
    app: blaze-competition-php-worker-submission-high-priority
spec:
  # replicas: 0
  selector:
    matchLabels:
      app: blaze-competition-php-worker-submission-high-priority
  template:
    metadata:
      labels:
        app: blaze-competition-php-worker-submission-high-priority
    spec:
      containers:
      - name: php-worker
        image: 127.0.0.1:32000/app-php-prod:v0.0.2
        imagePullPolicy: IfNotPresent
        command: ["php", "bin/console", "messenger:consume", "submission_amqp", "--queues=submission_high_priority_queue", "--verbose", "--time-limit=3600", "--memory-limit=128M"]
        resources:
          limits:
            memory: "128Mi" 
            cpu: "500m" 
          requests:
            memory: "64Mi"
            cpu: "250m"
      # volumes:
      # - name: app-code
      #   emptyDir: {}
      # - name: var-volume
      #   emptyDir: {}
        livenessProbe:
          exec:
            command: ["php", "bin/console", "about"]
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command: ["php", "bin/console", "about"]
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
