k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: blaze-competition
  labels:
    app: blaze-competition-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  clusterIP: None # <-- Makes the service headless for the StatefulSet
  selector:
    app: blaze-competition-db
