k8s/redis.yaml
# TODO: Add Persistence
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: blaze-competition
  labels:
    app: blaze-competition-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  clusterIP: None # <-- Headless
  selector:
    app: blaze-competition-redis
